--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "scripts": {
     "start": "concurrently \"npm run start:server\" \"npm run start:react\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start:react": "react-scripts start",
     "start:server": "json-server ./data/db.json --port 8080",
     "build": "react-scripts build",
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
+    "gh-pages": "^6.1.1",
     "json-server": "^0.16.1"
   }
 }
