move index.html back to public, try redirect index file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "flashcard",
+  "homepage": "http://youngflashcards.com/home",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
